Improve the cache