@@ -53,7 +53,7 @@ public class JwtUtil {
     public String getRoleFromToken(String token) {
         Claims claims = getClaimsFromToken(token);
         List<String> authorities = claims.get("authorities", List.class);
-        return authorities.isEmpty() ? "" : authorities.get(0);
+        return authorities.isEmpty() ? "" : authorities.getFirst();
     }
 
     public List<GrantedAuthority> getAuthoritiesFromClaims(Claims claims) {
